k8s-go-app/.kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-go-app
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: k8s-go-app
  template:
    metadata:
      labels:
        app: k8s-go-app
    spec:
      containers:
        - name: k8s-go-app
          #IMPORTANT: provide your username here
          image: docker.io/sim4nix/k8s-go-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /__heartbeat__
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 15
          readinessProbe:
            httpGet:
              path: /__heartbeat__
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 15
