k8s-go-app/.kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
  labels:
    app: k8s-go-app-ing
  name: k8s-go-app-ing
spec:
#  backend:
#    service:
#      name: k8s-go-app-srv
#      port:
#        number: 8080
  rules:
    - host: k8s-go-app.host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-go-app-srv
                port:
                  number: 8080
